feat: Add Google Gemini AI assistant with A2UI dynamic rendering and dedicated page.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@microsoft/signalr": "^10.0.0",
     "axios": "^1.13.2",
     "react": "^19.2.3",
